// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quick Start to Atlaskit Input Converter Should create a number input 1`] = `
<input
  aria-invalid="false"
  aria-labelledby="TestParam-uid2-label TestParam-uid2-helper TestParam-uid2-valid TestParam-uid2-error"
  class="css-tonkbf-Input"
  id="TestParam-uid2"
  name="TestParam"
  type="number"
  value="12"
/>
`;

exports[`Quick Start to Atlaskit Input Converter Should create a password input for NoEcho parameters 1`] = `
<input
  aria-invalid="false"
  aria-labelledby="TestParam-uid8-label TestParam-uid8-helper TestParam-uid8-valid TestParam-uid8-error"
  class="css-tonkbf-Input"
  id="TestParam-uid8"
  name="TestParam"
  type="password"
  value="test default"
/>
`;

exports[`Quick Start to Atlaskit Input Converter Should create a select input when there are multiple allowed values that are not boolean 1`] = `
<input
  aria-autocomplete="list"
  aria-labelledby="TestParam-uid6-label TestParam-uid6-helper TestParam-uid6-valid TestParam-uid6-error"
  autocapitalize="none"
  autocomplete="off"
  autocorrect="off"
  id="react-select-2-input"
  spellcheck="false"
  style="box-sizing: content-box; width: 2px; border: 0px; font-size: inherit; opacity: 1; outline: 0; padding: 0px;"
  tabindex="0"
  type="text"
  value=""
/>
`;

exports[`Quick Start to Atlaskit Input Converter Should create a toggle input when there are two allowed values that are boolean 1`] = `
<input
  checked=""
  class="sc-iwsKbI bCvnPm"
  id="uid5"
  name="TestParam"
  type="checkbox"
  value=""
/>
`;

exports[`Quick Start to Atlaskit Input Converter Should create multi select input for AZ parameter 1`] = `null`;

exports[`Quick Start to Atlaskit Input Converter Should render String inputs 1`] = `
<input
  aria-invalid="false"
  aria-labelledby="TestParam-uid3-label TestParam-uid3-helper TestParam-uid3-valid TestParam-uid3-error"
  class="css-tonkbf-Input"
  id="TestParam-uid3"
  name="TestParam"
  type="text"
  value="test default"
/>
`;
